--- a/source/products.html
+++ b/source/products.html
@@ -31,7 +31,7 @@
 {% if page.full_url contains "search=" %}
 <div class="start_shopping_message">
   <p>Sorry, no products were found.</p>
-  {% if categories.active == blank %}<p><a class="button" href="/products">Start shopping</a></p>{% endif %}
+  {% if categories.active == blank %}<p><a class="button" href="/products">Shop now</a></p>{% endif %}
 </div>
 {% else %}
 <p class="no_products">No products found.</p>
