Button and Welcome image

--- a/source/layout.html
+++ b/source/layout.html
@@ -55,7 +55,11 @@
           {% endif %}
         </a>
       </div>
-      <a href="/products" class="welcome_button">Shop now</a>
+      <a href="/products" class="welcome_button">
+      <button class="button add-to-cart-button">
+        <span class="status_text">SHOP NOW</span>
+      </button>
+      </a>
     </div>
   </div>
   {% endif %}
