--- a/source/layout.html
+++ b/source/layout.html
@@ -146,6 +146,14 @@
       {% endfor %}
       <li><a href="/contact">Contact</a></li>
     </ul>
+    <div class="footer_credit">
+    <span class="credit">
+©
+      <a href="https://www.denial.shop/">DENIAL</a> 2020
+    </span>
+    <div></br>In sterquiliniis invenitur</br>
+      In filth it shall be found</div>
+    </div>
   </footer>
   <div class="overlay">
     <div class="overlay_background"></div>
