--- a/source/layout.html
+++ b/source/layout.html
@@ -169,7 +169,7 @@
       </ul>
       {% if theme.show_search %}
       <form action="/products" method="get" class="search_form">
-        <input type="text" name="search" id="search" placeholder="Search products...">
+        <input type="text" name="search" id="search" placeholder="SEARCH PRODUCTS...">
       </form>
       {% endif %}
     </div>
