Added shadow to the header element
uppercase categories + colour white

Co-authored-by: Olly <obobstheman@gmail.com>

--- a/source/layout.html
+++ b/source/layout.html
@@ -74,8 +74,8 @@
     </ul>
     <div class="select">
       <select class="category_select">
-        <option value="" selected disabled>Browse products...</option>
-        <option value="/products">View all</option>
+        <option value="" selected disabled>BROWSE PRODUCTS...</option>
+        <option value="/products">VIEW ALL</option>
         {% for category in categories.active %}
         <option value="/category/{{ category.permalink }}">{{ category.name }}</option>
         {% endfor %}
